--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -29,22 +29,17 @@
 
   .service-card-wrapper.style1 {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
 
 
   .offer-card-wrapper.style1 {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 70px;
   }
 
-
-  .popup-card-wrapper {
-    display: grid;
-    grid-template-columns: 20% 18%;
-    gap: 90px;
-  }
+ 
 }
 
 
@@ -65,13 +60,7 @@
     gap: 80px;
   }
 
-
-
-  .popup-card-wrapper {
-    display: grid;
-    grid-template-columns: 35% 35%;
-    gap: 90px;
-  }
+ 
 }
 
 @media (min-width: 1200px) {
@@ -81,22 +70,23 @@
 
   .service-card-wrapper.style1 {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
   }
 
 
   .offer-card-wrapper.style1 {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
-  }
+    grid-template-columns: repeat(3, 1fr);
+    gap: 70px;
+}
+
+ 
 
 
-  .popup-card-wrapper {
-    display: grid;
-    grid-template-columns: 30% 30%;
-    gap: 90px;
-  }
+.header__hamburger{
+  display: none;
+}
+
 }
 
 @media (min-width: 1400px) {
@@ -114,12 +104,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 90px;
   }
-
-  .popup-card-wrapper {
-    display: grid;
-    grid-template-columns: 25% 25%;
-    gap: 90px;
-  }
+ 
 }
 
 @media (min-width: 1600px) {
@@ -138,13 +123,7 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 100px;
   }
-
-
-  .popup-card-wrapper {
-    display: grid;
-    grid-template-columns: 20% 20%;
-    gap: 90px;
-  }
+ 
 
 }
 
@@ -170,9 +149,6 @@
     left: -50px;
   }
   
-  .header-1 .header-right .header-button {
-    display: none;
-  }
 }
 
 
@@ -197,7 +173,24 @@
   }
 }
 
+@media (max-width: 1500px) {
+  .header-main .main-menu ul li { 
+    margin-inline-end: 16px;
+}
 
+.header-1 .header-right {
+  gap: 13px !important;
+}
+.theme-btn { 
+  font-size: 14px; 
+}
+.popup-card-wrapper {
+  display: grid;
+  grid-template-columns: 24% 22%;
+  justify-content: flex-end;
+  gap: 80px;
+}
+}
 
 @media (max-width: 1399px) {
 
@@ -226,8 +219,8 @@
   }
 
   .header-1 .mega-menu-wrapper .header-main .main-menu ul li a {
-    font-size: 16px;
-  }
+    font-size: 13px;
+}
   
   .header-1 .header-right {
     gap: 20px !important;
@@ -239,6 +232,50 @@
   .header-main .header-right {
     gap: 20px;
   }
+
+  .fancy-box.style1 .content .title {
+    font-size: 25px;
+    font-weight: bold;
+}
+.fancy-box.style1 .content .text {
+  font-size: 15px;
+}
+.checklist ul li .content label {
+  font-size: 15px; 
+}
+.checklist ul li .content span {
+  font-size: 13px; 
+}
+.checklist ul li {
+  gap: 8px;
+  margin-top: 5px;
+}
+.theme-btn {
+  font-size: 12px;
+}
+.theme-btn.style2 { 
+  padding: 15px 60px;
+  font-size: 29px; 
+}
+.theme-btn.style3 { 
+  padding: 15px 52px;
+  font-size: 29px; 
+}
+.offer-card.style1 .offer-card-header h3 {
+  margin-top: 60px;
+}
+.offer-card.style1 .offer-card-header .badge {
+  position: absolute;
+  top: -38px;
+  right: 8px;
+  padding: 4px 18px; 
+}
+.popup-card-wrapper {
+  display: grid;
+  grid-template-columns: 28% 26%;
+  justify-content: flex-end;
+  gap: 80px;
+}
 }
 
 
@@ -265,6 +302,21 @@
     border: 1px solid var(--border);
     padding: 10px;
   }
+
+  
+.header__hamburger{
+  display: block;
+}
+
+.header-1 .header-right .header-button {
+  display: none;
+}
+.popup-card-wrapper {
+  display: grid;
+  grid-template-columns: 32% 32%;
+  justify-content: flex-end;
+  gap: 80px;
+}
 }
 
 
@@ -273,11 +325,17 @@
   .header-main .main-menu ul li .has-homemenu .homemenu-items {
     flex-wrap: wrap;
   }
+  .popup-card-wrapper {
+    display: grid;
+    grid-template-columns: 46% 42%;
+    justify-content: flex-end;
+    gap: 80px;
+}
 }
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 767.98px) {
 
   .container {
     --bs-gutter-x: 1.5rem;
@@ -296,16 +354,7 @@
 
   h3 {
     font-size: 16px;
-  }
-  .preloader .animation-preloader .spinner {
-    width: 7.5em;
-    height: 7.5em;
-    margin: 0 auto 1.5em auto;
-  }
-
-  .preloader .animation-preloader .txt-loading {
-    font-size: 2.5em;
-  }
+  } 
 
 
 
@@ -391,12 +440,14 @@
   }
 
   .theme-btn.style2 {
-    padding: 15px 30px;
-  }
+    padding: 15px 65px;
+    margin-top: 25px;
+}
 
-  .theme-btn.style3 {
-    padding: 15px 24px;
-  }
+.theme-btn.style3 {
+  padding: 15px 57px;
+  margin-top: 5px!important;
+}
 
   .service-card.style1 {
     padding: 30px 8px 21px 8px;
@@ -468,4 +519,17 @@
   .offcanvas__info {
     width: 300px;
   }
+
+}
+
+@media (max-width: 420px) {
+  
+  .theme-btn.style2 {
+    padding: 15px 35px;
+    margin-top: 25px;
+}
+.theme-btn.style3 {
+  padding: 15px 27px;
+  margin-top: 5px!important;
+}
 }
